# website-2020

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  hrdb.rs  kv.rs  lib.rs  responder.rs  route.rs  template.rs  utils.rs
src/_template/: base.rs  edit.rs  error.rs  mod.rs  page.rs  table.rs
src/hrdb/: branch.rs  content.rs  controller.rs  location.rs  mod.rs  page.rs  shorthand.rs  utils.rs
src/renderer/: auth.rs  branches.rs  create.rs  delete.rs  dump.rs  edit.rs  form.rs  mod.rs  page.rs  perma.rs  relocate.rs  search.rs  shorthand.rs  static_.rs  versions.rs
src/template/: auth.rs  base.rs  edit.rs  error.rs  mod.rs  page.rs  table.rs
static/: auth.html  base.html  code.css  edit.html  error.html  page.html  style.css  table.html
worker/: worker.js
