[package]
name = "website"
version = "0.1.0"
authors = ["Isaac Clayton <slightknack> (slightknack@gmail.com)"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
# wasm
cfg-if = "0.1.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = { version = "0.1", optional = true }
wee_alloc = { version = "0.4", optional = true }

# rendering
pulldown-cmark = { version = "0.7", default-features = false }
sha2 = "0.9"   # content addressing
# I'm not using scrypt atm due to WASM incompatibility.
# If this changes in the future, I might migrate to it.
scrypt = "0.3" # authentication
getrandom = { version = "0.1", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "1.7"
ramhorns = "0.9"
time = "0.2"

# js integration
js-sys = "0.3"
futures = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  'FetchEvent',
  'FormData',
  'ReadableStream',
  'Request',
  'ResponseInit',
  'Response',
  'Headers',
]

[dependencies.cookie]
version = "0.14"
features = ["secure"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = "s"
